remove summary
